--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -1,38 +1,24 @@
-name: Update Weather Image Base64
+name: Update Weather Image
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # 6時間ごと
+    - cron: '0 */6 * * *'  # 6時間ごと
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install tools
-      run: sudo apt-get install -y jq curl
+      - name: Download weather image
+        run: |
+          curl -L -o weather.png https://www.jma.go.jp/bosai/weather_map/data/png/20251229081430_0_Z__C_010000_20251229060000_MET_CHT_JCIspas_JCP600x581_JRjmahp_image.png
 
-    - name: Download latest weather PNG
-      run: |
-        JSON=$(curl -s https://www.jma.go.jp/bosai/weather_map/data/list.json)
-        FILE=$(echo "$JSON" | jq -r '.near_monochrome.now[0]')
-        URL="https://www.jma.go.jp/bosai/weather_map/data/png/${FILE}"
-        echo "Downloading $URL"
-        curl -L "$URL" -o weather.png
-
-    - name: Convert to Base64
-      run: |
-        BASE64=$(base64 -w 0 weather.png)
-        echo "data:image/png;base64,$BASE64" > weather.txt
-
-    - name: Commit and push
-      run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add weather.txt
-        git commit -m "Update weather image"
-        git push
+      - name: Commit and push
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add weather.png
+          git commit -m "Update weather image" || echo "No change"
+          git push
