--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Convert PNG to Base64
         run: |
-          echo -n weather.png > public/weather.png
+          echo -n weather.png >> public/weather.png
           echo -n "data:image/png;base64," > public/weather.txt
           base64 -w 0 weather.png >> public/weather.txt
 
