Change mv to cp for weather.png in workflow

--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           echo -n "data:image/png;base64," > public/weather.txt
           base64 -w 0 weather.png >> public/weather.txt
-          mv weather.png public/
+          cp weather.png public/weather.png
 
       - name: Commit & Push
         run: |
