--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # 日本時間 00, 06, 12, 18 時（UTCでは -9時間）
     - cron: '0 */3 * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
