--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -44,6 +44,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add public/weather.txt
+          git add public/*
           git commit -m "Update weather image" || echo "No changes"
           git push
